TS-4201: call cont->handleEvent with OneWayTunnel object This closes #476.